# yahoo-finance-rs

./: Cargo.toml  build.rs
src/: error.rs  history.rs  lib.rs  profile.rs  streaming.rs
src/yahoo/: chart.rs  mod.rs  web_scraper.rs
tests/: history.rs  profile.rs
