[package]
name = "yahoo-finance"
version = "0.3.0"
authors = [ "Fred Briden <fred.briden@gmail.com>" ]
license = "MIT"
description = "An API to get financial data from Yahoo."
keywords = [ "yahoo", "finance", "stocks" ]
readme = "README.md"
edition = "2018"

include = [ "Cargo.toml", "LICENSE", "README.md", "src/**/*.rs" ]

repository = "https://github.com/fbriden/yahoo-finance-rs"
homepage = "https://github.com/fbriden/yahoo-finance-rs"

[dependencies]
base64 = "*"
chrono = { version = "*", features = [ "serde" ] }
futures = "*"
futures-util = { version = "*", default-features = false, features = [ "async-await", "sink", "std" ] }
market-finance = "*"
protobuf = "2"
reqwest = "*"
serde = { version = "*", features = [ "derive" ] }
serde_json = "*"
snafu = "0.6"
tokio = { version = "*", default-features = false, features = [ "stream", "rt-threaded", "macros" ]}
tokio-tungstenite = { version = "*", features = [ "tls" ] }
url = "*"


[dev-dependencies]
mockito = "*"
tokio-test = "*"

[build-dependencies]
protobuf-codegen-pure = "2"
